objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influencer_Score__c</fullName>
        <label>Influencer Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inquiry__c</fullName>
        <label>Inquiry</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_in_Last_30_Days__c</fullName>
        <formula>TODAY()-30&lt;= DATEVALUE(Last_Portal_Inquiry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquiry in Last 30 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCoapplicant__c</fullName>
        <formula>AND ( ISBLANK( LASERCA__Co_Applicant_Name__c ) , ISBLANK( LASERCA__Co_Applicant_Last_Name__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCoapplicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Salesforce_ID_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Salesforce ID sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jumbo2__c</fullName>
        <formula>Account.Parent.Parent_Jumbo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jumbo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jumbo__c</fullName>
        <formula>Account.Jumbo2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jumbo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOPProcessingError__c</fullName>
        <label>LOP Processing Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOP_Actions__c</fullName>
        <label>LOP Actions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOP_Contact_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>LOP Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOP_Error_Message__c</fullName>
        <label>LOP Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOP_Role__c</fullName>
        <label>LOP Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ROLE_USER</fullName>
                    <default>true</default>
                    <label>ROLE_USER</label>
                </value>
                <value>
                    <fullName>ROLE_ADMIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOP_User_Create_Date_Time__c</fullName>
        <label>Portal User Create</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LOP_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOP User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LO_Branch_Id__c</fullName>
        <label>LO Branch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_Estimated_Addressable_Production__c</fullName>
        <label>Estimated Addressable Monthly Production</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LO_Production_Segment__c</fullName>
        <label>Production Segmentation</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_Score__c</fullName>
        <label>LO Engagement Segment</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LO Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LO_Tier__c</fullName>
        <formula>IF(Number_of_Deals__c&gt;0,1, 
IF( Number_of_Leads__c + Number_of_Opportunities__c &gt; 0 &amp;&amp; Number_of_Deals__c = 0, 2, 3))</formula>
        <label>LO Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Closed_Deal_Wire_Date__c</fullName>
        <label>Last Closed Deal Wire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Lead_Submission__c</fullName>
        <label>Last Lead Submission</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Opportunity_Submission__c</fullName>
        <label>Last Opportunity Submission</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Portal_Inquiry__c</fullName>
        <label>Last Portal Inquiry</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Portal_Login__c</fullName>
        <label>Last Portal Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lender_Contact_Name__c</fullName>
        <description>Name of contact as maintained by partner lender HR</description>
        <label>Lender Contact Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Test_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has Loan Officer Test Been Attempted?</description>
        <label>Loan Officer Test Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Loss_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Types of clients</fullName>
                </value>
                <value>
                    <fullName>Loan product</fullName>
                </value>
                <value>
                    <fullName>Moved to unapproved branch</fullName>
                </value>
                <value>
                    <fullName>Don't understand</fullName>
                </value>
                <value>
                    <fullName>Distrust</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Type__c</fullName>
        <label>Loss Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contact_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>No Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost__c</fullName>
        <formula>If(text( Contact_Status__c )="Closed Lost",1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingAddressID__c</fullName>
        <label>MailingAddressID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <description>Custom Address field to be used in docusign</description>
        <formula>if(LEN(MailingStreet)&gt;0, MailingStreet&amp; ", " , "" ) &amp; 
if(LEN(MailingCity)&gt;0, MailingCity&amp; ", " , "" )&amp;
if(LEN(MailingState)&gt;0, MailingState&amp; ", " , "" )&amp;
if(LEN(MailingPostalCode)&gt;0, MailingPostalCode&amp; " ","") &amp;
If(LEN( MailingCountry) &gt;0, MailingCountry,"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Custom Address field to be used in docusign</inlineHelpText>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manually_Set_Contact_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bypasses automation to set LO contact status automatically based on # of referred Leads</description>
        <label>Manually Set Contact Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketo_Cookie__c</fullName>
        <label>Marketo Cookie</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketo_SyncZZ__c</fullName>
        <formula>if (
AND (
RecordTypeId ="012E00000002OGm",
NOT(ISNULL(Email)),
 NOT( ISNULL(Converted_Date_Time__c )),

HasOptedOutOfEmail = FALSE), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketo SyncZZ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketo_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketo Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mercury_Phone__c</fullName>
        <formula>RIGHT( Phone  , 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mercury Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Loan_Officer_Test_Score__c</fullName>
        <description>Most recent test score that the Loan Officer received in the online quiz</description>
        <label>Most Recent Loan Officer Test Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NMLS__c</fullName>
        <label>NMLS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NMLS_string__c</fullName>
        <formula>SUBSTITUTE(TEXT(NMLS__c),",","")</formula>
        <label>NMLS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_and_Relationship_of_Adult__c</fullName>
        <label>Name and Relationship of Adult</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_and_Relationship_of_person__c</fullName>
        <label>Name and Relationship of person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Lead_Generator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Lead Generator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Deals__c</fullName>
        <inlineHelpText>Number of closed/funded deals where this contact is the Referring Contact</inlineHelpText>
        <label>Number of Referred Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Delinquencies__c</fullName>
        <label>Number of Delinquencies</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Leads__c</fullName>
        <inlineHelpText>Count of leads where this contact is listed as the Referring Contact</inlineHelpText>
        <label>Number of Referred Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunities__c</fullName>
        <inlineHelpText>Number of opportunities where this contact is the Referring Contact</inlineHelpText>
        <label>Number of Referred Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tickets__c</fullName>
        <description>Loan Officer will be given a fraction of a ticket every time they are entered into the pool to receive leads.</description>
        <label>Number of Tickets</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Only_SysAdmin_Can_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked only System Administrator can edit this contact</description>
        <inlineHelpText>If checked only System Administrator can edit this contact</inlineHelpText>
        <label>Only SysAdmin Can Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opp_Lookup_Helper__c</fullName>
        <description>Opportunity Contact Lookup helper to help with multiple contacts conversion process mapping</description>
        <label>Opp_Lookup_Helper</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <inlineHelpText>Assign a value if this contact can be an Escrow for Spruce or Vantage Point.</inlineHelpText>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spruce</fullName>
                </value>
                <value>
                    <fullName>Vantage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Branch__c</fullName>
        <label>Parent Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personalized_Referral_Code__c</fullName>
        <label>Personalized Referral Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline_Value_Lead__c</fullName>
        <description>Value of lead pipeline associated with referring contact</description>
        <label>Pipeline Value Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pipeline_Value_Opportunity__c</fullName>
        <description>Pipeline value of associated opportunities from referring contact</description>
        <label>Pipeline Value Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pipeline_Value__c</fullName>
        <formula>Pipeline_Value_Lead__c +  Pipeline_Value_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_ID__c</fullName>
        <label>Portal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Login_Last_30_Days__c</fullName>
        <formula>TODAY()-30&lt;=DATEVALUE( Last_Portal_Login__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Login Last 30 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Onboarded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether partner has had a 1-on-1 onboarding call</inlineHelpText>
        <label>Portal Onboarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Onboarding_Date_Time__c</fullName>
        <label>Portal Onboarding Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Portal_Password__c</fullName>
        <label>Portal Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Preferred_Phone</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_foreclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous foreclosure?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Score__c</fullName>
        <description>Aggregation score for production activity. Based on conversion rates of 15% from Lead to Close and 67% from Opp to Close (mid April, 2018).</description>
        <formula>(Number_of_Leads__c*0.15) +  (Number_of_Opportunities__c*0.67) +  Number_of_Deals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregation score for production activity. Based on conversion rates of 15% from Lead to Close and 67% from Opp to Close (mid April, 2018).</inlineHelpText>
        <label>Production Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Status__c</fullName>
        <label>Production Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>High_Medium_Low</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>Profession</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Inquiry_in_Last_90_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the Loan Officer submitted a property in the LO portal in the last 90 days?</description>
        <label>Property Inquiry in Last 90 Days?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Status__c</fullName>
        <label>Prospect Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_records_count__c</fullName>
        <label>Public records count</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualified_for_Lead_Referrals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this an active Loan Officer working for a lender that is comfortable with their Loan Officers receiving leads?</description>
        <label>Qualified for Lead Referrals?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quiz_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quiz Passed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REA_Score__c</fullName>
        <label>REA Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Owner__c</fullName>
        <formula>IF(  Sales_Director__r.Id  = $User.Id, "Yes", "No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RM Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Engagement_Comments__c</fullName>
        <label>RSM Engagement Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RSM_Engagement_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSM Engagement Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Background_History__c</fullName>
        <label>Reason for Background History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type_CName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type (CName)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Lead__c</fullName>
        <label>Record Type (Lead)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Contact_URL__c</fullName>
        <formula>'https://www.unison.com/?utm_source=partner&amp;utm_medium=eml&amp;utm_term='+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Contact URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Campaign__c</fullName>
        <formula>Account.Campaign__c</formula>
        <label>Related Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resend_Portal_Credentials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resend Portal Credentials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retired_Co__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retired (Co)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <inlineHelpText>###-##-####</inlineHelpText>
        <label>Deprecated Co SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Director_BASE__c</fullName>
        <label>Sales Director (BASE)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Director_Calendly__c</fullName>
        <formula>Sales_Director__r.Calendly_Link__c</formula>
        <label>Sales Director Calendly</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Director_Email__c</fullName>
        <formula>Sales_Director__r.Email</formula>
        <label>Sales Director Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Director_Name_Text__c</fullName>
        <description>Used for third-party app integrations (do not delete)</description>
        <formula>Sales_Director__r.FirstName &amp; " " &amp; Sales_Director__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Director Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Director_Phone__c</fullName>
        <formula>Sales_Director__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Director Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Director</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scores__c</fullName>
        <label>Scores</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Self_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_HO_Referral_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send HO Referral Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_LO_Covid_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be used to send an email to all active Loan Officers on 4-16. Can be marked for deprecation afterwards.</description>
        <label>Send LO Covid Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_welcome_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send welcome email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Set_Inactive__c</fullName>
        <label>Set Inactive</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signed_PMP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed PMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_PREP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed PREP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <inlineHelpText>###-##-####</inlineHelpText>
        <label>Deprecated SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spruce_Account_Number__c</fullName>
        <description>Spruce Account Number for wiring instructions</description>
        <label>Spruce Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spruce_Contact_License_ID__c</fullName>
        <description>Spruce Contact License ID</description>
        <externalId>true</externalId>
        <label>Spruce Contact License ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Spruce_OBI__c</fullName>
        <description>Spruce OBI for wiring instructions</description>
        <label>Spruce OBI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spruce_Routing_Number__c</fullName>
        <description>Spruce Routing Number for wiring instructions</description>
        <label>Spruce Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Company_Name_DBA__c</fullName>
        <label>Sub-Company Name (DBA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Lead_to_Unison_in_Last_90_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted Lead to Unison in Last 90 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Talkdesk_User__c</fullName>
        <formula>Owner.Talkdesk_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Talkdesk User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_1__c</fullName>
        <label>Title#1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Case__c</fullName>
        <label>Title Case #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Officer_Name__c</fullName>
        <label>Title Officer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Level_Parent_Formula__c</fullName>
        <formula>Account.Top_Level_Parent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top Level Parent Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Level_Parent__c</fullName>
        <label>Top Level Parent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <label>Topics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Personal Finance</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Producer/Assignment Editor/Editor</fullName>
                </value>
                <value>
                    <fullName>Demographic</fullName>
                </value>
                <value>
                    <fullName>Lifestyle</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalClosedTradelinesCount__c</fullName>
        <label>Total Closed Tradelines Count</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCurrentTradelinesCount__c</fullName>
        <label>Total Current Tradelines Count</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalLate30DaysCurrentDelinquencies__c</fullName>
        <label>Total Late 30 Days Current Delinquencies</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalLate60DaysCurrentDelinquencies__c</fullName>
        <label>Total Late 60 Days Current Delinquencies</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalLate90PlusDaysCurrentDelinquencies__c</fullName>
        <label>Total Late 90 Days Current Delinquencies</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalUnratedTradelinesCount__c</fullName>
        <label>Total Unrated Tradelines Count</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Deal_Value__c</fullName>
        <formula>Pipeline_Value_Lead__c / Pipeline_Value_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Deal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trained_Date_Time__c</fullName>
        <label>Trained Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransUnion_Credit_Score__c</fullName>
        <label>TransUnion Credit Score</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <label>Twitter Handle</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Update_LOP_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update LOP User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Retail_Branch_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Retail Branch Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Suite__c</fullName>
        <label>Work Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>